Bug 544298 [12][codegen] Switch Expressions - exceeded stack size
Change-Id: Ie88811808167dbcde8e7a2c4cdda5a6236fc601a